--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "notes",
-    "slug": "notes",
+    "name": "gitlab",
+    "slug": "gitlab",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
